--- a/personal.html
+++ b/personal.html
@@ -47,7 +47,13 @@
                         <li><a href="https://www.linkedin.com/in/niek-wolbrink-026101113/" target="_blank"> <img class="socialsicon" src="image/Linkedin-icon2.png" alt="linkedin"></a></li>
             </ul>
 
-            <div class="personalPageOverview">
+            <div class="PageOverview">
+                <div class="txtPageTitle"><h1>Personal</h1></div>
+
+                <div class="title txtPagePersonal">
+                    <p>
+                        Hi, I'm Niek. I'm 28 years and ... days old. I was born in Leiderdorp and since I was four years old, my parents and I moved to Apeldoorn. Right now I still live in Apeldoorn. <br><br><br> Before I started my study Open-ICT in Utrecht I was working as a pharmacy assistant in the hospital. That's also where I met my girlfriend and right now we live together with our two cats. <br><br><br>   I like to make music. I mainly make electronic music. I also use my guitar or other sounds that are useful for making music.
+                    </p> <br><br>
                 <div class="bulletpointwindow">
                     <ul><h3>What I like to do:</h3>
                         <li>Music Production</li>
@@ -56,12 +62,6 @@
                         <li>Learning new things</li>
                     </ul>
                 </div>
-
-                <div class="title txtPagePersonal">
-                    <h1>Personal</h1>
-                    <p>
-                        Hi, I'm Niek. I'm 28 years and ... days old. I was born in Leiderdorp and since I was four years old, my parents and I moved to Apeldoorn. Right now I still live in Apeldoorn. <br><br><br> Before I started my study Open-ICT in Utrecht I was working as a pharmacy assistant in the hospital. That's also where I met my girlfriend and right now we live together with our two cats. <br><br><br>   I like to make music. I mainly make electronic music. I also use my guitar or other sounds that are useful for making music.
-                    </p>
                     <!-- HIERZO 'READ ON' STUKJE -->
                 </div>
             </div>
