--- a/project1.html
+++ b/project1.html
@@ -47,9 +47,9 @@
                         <li><a href="https://www.linkedin.com/in/niek-wolbrink-026101113/" target="_blank"> <img class="socialsicon" src="image/Linkedin-icon2.png" alt="linkedin"></a></li>
             </ul>
 
-            <div class="projectPageOverview">
+            <div class="PageOverview">
 
-                <div class="title">
+                <div class="txtPageTitle">
                     <h1>Portfolio website</h1>
                 </div>
                 <div class="project-window">
