--- a/projects.html
+++ b/projects.html
@@ -47,10 +47,10 @@
                         <li><a href="https://www.linkedin.com/in/niek-wolbrink-026101113/" target="_blank"> <img class="socialsicon" src="image/Linkedin-icon2.png" alt="linkedin"></a></li>
             </ul>
 
-            <div class="projectPageOverview">
+            <div class="PageOverview">
 
 
-                <div class="txtPageProjects"><h1>Projects</h1></div>
+                <div class="txtPageTitle"><h1>Projects</h1></div>
                 
                         <a href="project1.html"> 
                             <div class="project-window">
