--- a/contactform.html
+++ b/contactform.html
@@ -47,7 +47,7 @@
                         <li><a href="https://www.linkedin.com/in/niek-wolbrink-026101113/" target="_blank"> <img class="socialsicon" src="image/Linkedin-icon2.png" alt="linkedin"></a></li>
             </ul>
 
-            <div class="contactTxt">
+            <div class="txtPageTitle">
                 <h1>Contact me</h1>
                 <form action="mailto:niek.wolbrink@student.hu.nl" method="post" enctype="text/plain">
                     <label for="name">Name:</label><br>
