--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="introlines.css">
 </head>
 
 <body>
