--- a/projects.html
+++ b/projects.html
@@ -20,11 +20,11 @@
                 <div class="linesT"></div>
             </div>
 
-            <img class="photo" id="myPhoto" src="image/profilepic.png" alt="photo">
+            <img class="photo" id="myPhoto" src="image/image-niek.png" alt="photo">
 
             <nav class="nav-main" id="myNav">
                 <ul>
-                    <li><a href="main.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="personal.html">Personal</a></li>
                     <li><a style="text-decoration: underline;" href="projects.html">Projects</a></li>
                     <li><a href="contactform.html">Contact</a></li>
@@ -41,49 +41,25 @@
             <div class="dots">
                 <img src="image/dots.png" alt="dots" id="myDots">
             </div>
-            <ul class="socials" id="mySocials">
-                        <li><a href="https://github.com/Niek218" target="_blank"> <img class="socialsicon" src="image/icons8-github-100.png" alt="github"></a></li>
-                        <!-- <li><a href="contactform.html" target="_blank"> <img class="socialsicon" src="image/Mail-icon.png " alt="e-mail"></a></li> -->
-                        <li><a href="https://www.linkedin.com/in/niek-wolbrink-026101113/" target="_blank"> <img class="socialsicon" src="image/Linkedin-icon2.png" alt="linkedin"></a></li>
-            </ul>
+                <ul class="socials" id="mySocials">
+                    <li><a href="https://github.com/Niek218" target="_blank"> <img class="socialsicon" src="image/icons8-github-100.png" alt="github"></a></li>
+                    <li><a href="https://www.linkedin.com/in/niek-wolbrink-026101113/" target="_blank"> <img class="socialsicon" src="image/Linkedin-icon2.png" alt="linkedin"></a></li>
+                </ul>
 
             <div class="PageOverview">
 
 
-                <div class="txtPageTitle"><h1>Projects</h1></div>
-                
+                <div class="pageTitle"><h1>Projects</h1></div>
+                    <div class="pageTxt">
                         <a href="project1.html"> 
                             <div class="project-window">
-                                <ul>
-                                    <li><h3>Portfolio website</h3></li>
-                                </ul>
+                                    <div><h3>Portfolio website</h3></div>
+                                    <div><h3>Project 2</h3></div>
+                                    <div><h3>Project 3</h3></div>
+                                    <div><h3>Project 4</h3></div>
                             </div>
                         </a>
-
-                        <a href="#"> 
-                            <div class="project-window">
-                                <ul>
-                                    <li><h3>Project 2</h3> <br>Comming soon. Stay tuned!</li>
-                                </ul>
-                            </div>
-                        </a>
-
-                        <a href="#"> 
-                            <div class="project-window">
-                                <ul>
-                                    <li><h3>Project 3</h3> <br>Comming soon. Stay tuned!</li>
-                                </ul>
-                            </div>
-                        </a>
-
-                        <a href="#"> 
-                            <div class="project-window">
-                                <ul>
-                                    <li><h3>Project 4</h3> <br>Comming soon. Stay tuned!</li>
-                                </ul>
-                            </div>
-                        </a>
-
+                    </div>
             </div>
         </div>
 
