--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="mainPage">
+        <div class="mainPageIndex">
             <div class="dots">
                 <img src="image/dots.png" alt="dots" id="myDots">
             </div>
@@ -51,7 +51,7 @@
                     <h1>Feel free to take a look around if you like.</h1>
                 </div>
                 <div class="musicDiv">
-                    <p class="musicText" onclick="showMusicSongs()"> Click here to listen to some of my songs </p>
+                    <p class="musicText" onclick="showMusicSongs()"> ▶️ Click here to listen to some of my songs </p>
                     <ul id="musicSongs">
                         <audio controls id="audioControls">
                             <source src="image/Guitar-v2.mp3" type="audio/mpeg">
@@ -68,6 +68,11 @@
                 </div>
         </div>
     </div>
+
+    <!-- <div class="footer">
+        <p>Niek Wolbrink</p>
+        <p>Copyright © 2023 All Rights Reserved</p>
+    </div> -->
 
     <script type="text/javascript" src="myScript.js"></script>
 </body>
