--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 
 
                 <div class="pageTitle"><h1>Projects</h1></div>
-                    <div class="pageTxt">
+                    <div class="projectTxt">
                         <a href="project1.html"> 
                             <div class="project-window">
                                     <div><h3>Portfolio website</h3></div>
