--- a/contactform.html
+++ b/contactform.html
@@ -27,7 +27,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="personal.html">Personal</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contactform.html">Contact</a></li>
+                    <li><a style="text-decoration: underline;" href="contactform.html">Contact</a></li>
                 </ul>
             </nav>
 
@@ -62,9 +62,9 @@
                         <input type="text" id="subject" name="subject" required><br><br>
                     
                         <label for="message">Message:</label><br>
-                        <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
+                        <textarea id="message" name="message" rows="4" cols="35" required></textarea><br><br>
                     
-                        <input type="submit" value="Submit">
+                        <input type="submit" value="Submit" style="margin: 5% 0% 0% 0%;">
                     </form>
                 </div>
             </div>
