--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             </div>
         </div>
 
+
+
         <div class="mainPageIndex">
             <div class="dots">
                 <img src="image/dots.png" alt="dots" id="myDots">
@@ -46,33 +48,34 @@
                         <li><a href="https://www.linkedin.com/in/niek-wolbrink-026101113/" target="_blank"> <img class="socialsicon" src="image/Linkedin-icon2.png" alt="linkedin"></a></li>
             </ul>
 
-                <div class="mainTxt">
-                    <p>Hi I'm Niek, <br> Thanks for visiting my website!</p>
+            <div class="socialsArrow" id="socialsArrow">
+                <h2>↑</h2>
+            </div>
+
+                <div style="margin: 0% 10% 0% 0%;" class="mainTxt">
+                    <p class="intro">Hi I'm Niek, <br> Thanks for visiting my website!</p>
                     <h1>Feel free to take a look around if you like.</h1>
-                </div>
-                <div class="musicDiv">
                     <p class="musicText" onclick="showMusicSongs()"> ▶️ Click here to listen to some of my songs </p>
-                    <ul id="musicSongs">
-                        <audio controls id="audioControls">
-                            <source src="image/Guitar-v2.mp3" type="audio/mpeg">
-                        </audio>
-                        <br>
-                        <audio controls id="audioControls">
-                            <source src="image/Birthday.mp3" type="audio/mpeg">
-                        </audio>
-                        <br>
-                        <audio controls id="audioControls">
-                            <source src="image/Now.wav" type="audio/mpeg">
-                        </audio>
-                    </ul>
-                </div>
+            </div>
+            <div class="musicDiv">
+
+                <ul id="musicSongs">
+                    <audio controls id="audioControls">
+                        <source src="image/Guitar-v2.mp3" type="audio/mpeg">
+                    </audio>
+                    <br>
+                    <audio controls id="audioControls">
+                        <source src="image/Birthday.mp3" type="audio/mpeg">
+                    </audio>
+                    <br>
+                    <audio controls id="audioControls">
+                        <source src="image/Now.mp3" type="audio/mpeg">
+                    </audio>
+                </ul>
+        </div>
+
         </div>
     </div>
-
-    <!-- <div class="footer">
-        <p>Niek Wolbrink</p>
-        <p>Copyright © 2023 All Rights Reserved</p>
-    </div> -->
 
     <script type="text/javascript" src="myScript.js"></script>
 </body>
