--- a/personal.html
+++ b/personal.html
@@ -54,17 +54,13 @@
                         <p id="ageNumbers"></p> 
                             
                         <br><br>
-                        <div class="bulletpointwindow">
-                            <p id="hobbies">
-
-                            </p>
+                            <div class="bulletpointwindow">
+                            <p id="hobbies"></p>
                         </div>
                     </div>
-                        <!-- HIERZO 'READ ON' STUKJE -->
+                </div>
             </div>
         </div>
-
-    </div>
 
     <script src="myScript.js"></script>
 </body>
