--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="mainPage">
+        <div class="mainPage" > <!-- flex direction + jusify content exception for better layout -->
             <div class="dots">
                 <img src="image/dots.png" alt="dots" id="myDots">
             </div>
@@ -46,21 +46,31 @@
                     <li><a href="https://www.linkedin.com/in/niek-wolbrink-026101113/" target="_blank"> <img class="socialsicon" src="image/Linkedin-icon2.png" alt="linkedin"></a></li>
                 </ul>
 
-            <div class="PageOverview">
+            <!-- <div  class="PageOverview"> -->
 
-
-                <div class="pageTitle"><h1>Projects</h1></div>
+                <div style="margin: 3% 0% 0% 10%;" class="pageTitle">
+                    <h1>Projects</h1>
+                </div>
                     <div class="projectTxt">
-                        <a href="project1.html"> 
                             <div class="project-window">
-                                    <div><h3>Portfolio website</h3></div>
-                                    <div><h3>Project 2</h3></div>
-                                    <div><h3>Project 3</h3></div>
-                                    <div><h3>Project 4</h3></div>
+                                    <div>
+                                        <a href="project1.html"><h2>Portfolio website</h2> <br></a>
+                                        <p><i>This is my first project</i></p>
+                                    </div>
+                                    <div>
+                                        <h2>Project 2</h2> <br>
+                                        <p><i>comming soon</i></p>
+                                    </div>
+                                    <div>
+                                        <h2>Project 3</h2>
+                                    </div>
+                                    <div>
+                                        <h2>Project 4</h2>
+                                    </div>
                             </div>
                         </a>
                     </div>
-            </div>
+            <!-- </div> -->
         </div>
 
     </div>
