--- a/project1.html
+++ b/project1.html
@@ -26,7 +26,7 @@
                 <ul>
                     <!-- <li><a href="main.html">Home</a></li>
                     <li><a href="personal.html">Personal</a></li> -->
-                    <li><a href="projects.html">Return to Projects</a></li>
+                    <li><a href="projects.html">Return to<br>Projects</a></li>
                     <!-- <li><a href="cv.html">CV</a></li> -->
                 </ul>
             </nav>
@@ -54,9 +54,7 @@
                 </div>
                 <div class="pageTxt">
                     <ul>
-                        <h2>Hey, you're looking at it right now 😵
-                            <br><br>
-                            Smile
+                        <h2><a style="color: white;" href="index.html">Click here to visit this amaazing website 😲</a>
                         </h2>
                     </ul>
                 </div>
